# water-my-plant

./: .gitignore
WaterMyPlant/: build.gradle.kts  settings.gradle.kts
WaterMyPlant/app/: build.gradle.kts
WaterMyPlant/app/src/androidTest/java/com/example/watermyplant/: ExampleInstrumentedTest.kt
WaterMyPlant/app/src/main/: AndroidManifest.xml
WaterMyPlant/app/src/main/java/com/example/watermyplant/: MainActivity.kt  WaterMyPlantApp.kt  new.json
WaterMyPlant/app/src/main/java/com/example/watermyplant/data/: TokenManager.kt
WaterMyPlant/app/src/main/java/com/example/watermyplant/data/api/: AuthApi.kt
WaterMyPlant/app/src/main/java/com/example/watermyplant/data/model/: AuthResponse.kt  Models.kt
WaterMyPlant/app/src/main/java/com/example/watermyplant/data/repository/: AuthRepository.kt  PlantRepository.kt  SensorRepository.kt
WaterMyPlant/app/src/main/java/com/example/watermyplant/di/: NetworkModule.kt
WaterMyPlant/app/src/main/java/com/example/watermyplant/network/: ApiService.kt  AuthInterceptor.kt  RetrofitInstance.kt
WaterMyPlant/app/src/main/java/com/example/watermyplant/ui/components/: AppButton.kt  AppTextField.kt  CommonComponents.kt  ErrorMessage.kt
WaterMyPlant/app/src/main/java/com/example/watermyplant/ui/navigation/: Navigation.kt
WaterMyPlant/app/src/main/java/com/example/watermyplant/ui/theme/: Color.kt  Theme.kt  Type.kt
WaterMyPlant/app/src/main/java/com/example/watermyplant/util/: DateUtils.kt
WaterMyPlant/app/src/main/res/values/: strings.xml  themes.xml
WaterMyPlant/app/src/main/res/xml/: network_security_config.xml
WaterMyPlant/app/src/test/java/com/example/watermyplant/: ExampleUnitTest.kt
WaterMyPlant/gradle/: libs.versions.toml
WaterMyPlant/gradle/wrapper/: gradle-wrapper.properties
server/: API_DOCUMENTATION.md  README.md  alembic.ini  moisture_sensor.ino  plants.sh  pyproject.toml
server/migrations/: env.py
server/moisture_data_cache/: cache.db
server/src/water_my_plant/: config.py  main.py
server/src/water_my_plant/application/: models.py
server/src/water_my_plant/business_logic/: plant_service.py  sensors_service.py  user_service.py  watering_service.py
server/src/water_my_plant/dal/: base.py  cache_service.py  db_service.py  models.py
server/src/water_my_plant/http_handlers/: auth.py  plants.py  security.py  sensors.py  watering.py
(+17 files in other folders)
